log
Wed 23 Aug 2023 09:14:17 PM UTC: 
 tests:  0|6
total_score: 0/70
0c271ad
Wed 23 Aug 2023 11:29:34 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6baf9f5
Wed 23 Aug 2023 11:33:06 PM UTC: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
e9e3fa4
Wed 23 Aug 2023 11:33:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1b7203e
Wed 23 Aug 2023 11:35:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c00a607
Wed 23 Aug 2023 11:35:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3224713
Wed 23 Aug 2023 11:43:41 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
38968db
Wed 23 Aug 2023 11:44:01 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
376b4b8
Wed 23 Aug 2023 11:44:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
684536f
Wed 23 Aug 2023 11:45:26 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
5c2992f
Wed 23 Aug 2023 11:45:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3374532
Wed 23 Aug 2023 11:51:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3bf10e0
Thu 24 Aug 2023 12:08:48 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
c22a28d
Thu 24 Aug 2023 12:09:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4529004
Thu 24 Aug 2023 12:13:26 AM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
b7fefe0
Thu 24 Aug 2023 12:15:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
47fe61d
Thu 24 Aug 2023 12:15:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2e0b6f0
Thu 24 Aug 2023 12:17:16 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:75:24: error: initialization of ‘int *’ from incompatible pointer type ‘void **’ [-Werror=incompatible-pointer-types]
   75 |     int* lastElement = &(list->tail->data);
      |                        ^
cc1: all warnings being treated as errors
Compilation failed
53d8a2b
Thu 24 Aug 2023 12:17:24 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f203c38
Thu 24 Aug 2023 12:45:50 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:75:24: error: initialization of ‘int *’ from incompatible pointer type ‘void **’ [-Werror=incompatible-pointer-types]
   75 |     int* lastElement = &(list->tail->data);
      |                        ^
cc1: all warnings being treated as errors
Compilation failed
4d73edb
Thu 24 Aug 2023 12:45:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ecc13b5
Thu 24 Aug 2023 12:48:19 AM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
 tests:  6|4
total_score: 25/70
f74f90a
Thu 24 Aug 2023 12:48:34 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ff66354
